# BackTraderP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DataMokerSimu/: CMakeLists.txt  DataMokerSimu.cpp  DataMokerSimu.h  DataQuoter.h  MyQuoter.cpp  MyQuoter.h
DataMokerSimu/DataCSVGet/: CMakeLists.txt  DataCSVGet.cpp  DataCSVGet.h  main.cpp
DataStore/csv/20240924_night/: .~lock.au2412_market_data.csv#  au2412_market_data.csv  cu2410_market_data.csv
HistoryReplayer/: CMakeLists.txt  HistoryReplayer.cpp  HistoryReplayer.h
Strategys/: CMakeLists.txt  StrategyTemp.h  Strategys.cpp  Strategys.h
comm/: CMakeLists.txt  DataPar.cpp  DataPar.h  DataType.hpp  SelTime.h
src/: CMakeLists.txt  data_csv_get_test.cpp  main.cpp  spdlog_test_main.cpp
tests/: CMakeLists.txt
